prevent jumping

--- a/_sass/overwrite/_custom.scss
+++ b/_sass/overwrite/_custom.scss
@@ -72,6 +72,12 @@ button[type="submit"] {
   border-radius: 2px;
   box-shadow: 0px 2px 1px 0px rgba(0,0,0,0.25);
   height: 40px;
+
+  &:focus {
+    border-radius: 2px;
+    box-shadow: 0px 2px 1px 0px rgba(0,0,0,0.25);
+    height: 40px;
+  }
 }
 
 // footer
